@@ -26,7 +26,6 @@ import java.io.File;
 import java.nio.file.Files;
 
 import static com.google.common.collect.Iterables.getOnlyElement;
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class TestDeltaLakePlugin
@@ -34,9 +33,9 @@ public class TestDeltaLakePlugin
     @Test
     public void testCreateConnector()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
-        factory.create("test", ImmutableMap.of("hive.metastore.uri", "thrift://foo:1234"), new TestingConnectorContext());
+        ConnectorFactory factory = getConnectorFactory();
+        factory.create("test", ImmutableMap.of("hive.metastore.uri", "thrift://foo:1234"), new TestingConnectorContext())
+                .shutdown();
     }
 
     @Test
@@ -44,20 +43,33 @@ public class TestDeltaLakePlugin
     {
         Plugin plugin = new TestingDeltaLakePlugin();
         ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
-        factory.create("test", ImmutableMap.of("hive.metastore.uri", "thrift://foo:1234"), new TestingConnectorContext());
+        factory.create("test", ImmutableMap.of("hive.metastore.uri", "thrift://foo:1234"), new TestingConnectorContext())
+                .shutdown();
+    }
+
+    @Test
+    public void testTestingFileMetastore()
+    {
+        ConnectorFactory factory = getConnectorFactory();
+        factory.create(
+                        "test",
+                        ImmutableMap.of(
+                                "hive.metastore", "file",
+                                "hive.metastore.catalog.dir", "/tmp"),
+                        new TestingConnectorContext())
+                .shutdown();
     }
 
     @Test
     public void testThriftMetastore()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
+        ConnectorFactory factory = getConnectorFactory();
         factory.create(
-                "test",
-                ImmutableMap.of(
-                        "hive.metastore", "thrift",
-                        "hive.metastore.uri", "thrift://foo:1234"),
-                new TestingConnectorContext())
+                        "test",
+                        ImmutableMap.of(
+                                "hive.metastore", "thrift",
+                                "hive.metastore.uri", "thrift://foo:1234"),
+                        new TestingConnectorContext())
                 .shutdown();
 
         assertThatThrownBy(() -> factory.create(
@@ -75,14 +87,14 @@ public class TestDeltaLakePlugin
     @Test
     public void testGlueMetastore()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
+        ConnectorFactory factory = getConnectorFactory();
         factory.create(
-                "test",
-                ImmutableMap.of(
-                        "hive.metastore", "glue",
-                        "hive.metastore.glue.region", "us-east-2"),
-                new TestingConnectorContext());
+                        "test",
+                        ImmutableMap.of(
+                                "hive.metastore", "glue",
+                                "hive.metastore.glue.region", "us-east-2"),
+                        new TestingConnectorContext())
+                .shutdown();
 
         assertThatThrownBy(() -> factory.create(
                 "test",
@@ -101,9 +113,7 @@ public class TestDeltaLakePlugin
     @Test
     public void testAlluxioMetastore()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
-
+        ConnectorFactory factory = getConnectorFactory();
         assertThatThrownBy(() -> factory.create(
                 "test",
                 ImmutableMap.of("hive.metastore", "alluxio"),
@@ -122,31 +132,31 @@ public class TestDeltaLakePlugin
     @Test
     public void testNoCaching()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
+        ConnectorFactory factory = getConnectorFactory();
         factory.create("test",
-                ImmutableMap.of(
-                        "hive.metastore.uri", "thrift://foo:1234",
-                        "delta.metadata.cache-ttl", "0s"),
-                new TestingConnectorContext());
+                        ImmutableMap.of(
+                                "hive.metastore.uri", "thrift://foo:1234",
+                                "delta.metadata.cache-ttl", "0s"),
+                        new TestingConnectorContext())
+                .shutdown();
     }
 
     @Test
     public void testNoActiveDataFilesCaching()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
+        ConnectorFactory factory = getConnectorFactory();
         factory.create("test",
-                ImmutableMap.of(
-                        "hive.metastore.uri", "thrift://foo:1234",
-                        "delta.metadata.live-files.cache-ttl", "0s"),
-                new TestingConnectorContext());
+                        ImmutableMap.of(
+                                "hive.metastore.uri", "thrift://foo:1234",
+                                "delta.metadata.live-files.cache-ttl", "0s"),
+                        new TestingConnectorContext())
+                .shutdown();
     }
 
     @Test
     public void testHiveConfigIsNotBound()
     {
-        ConnectorFactory factory = getOnlyElement(new DeltaLakePlugin().getConnectorFactories());
+        ConnectorFactory factory = getConnectorFactory();
         assertThatThrownBy(() -> factory.create("test",
                 ImmutableMap.of(
                         "hive.metastore.uri", "thrift://foo:1234",
@@ -159,9 +169,7 @@ public class TestDeltaLakePlugin
     @Test
     public void testReadOnlyAllAccessControl()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
-
+        ConnectorFactory factory = getConnectorFactory();
         factory.create(
                         "test",
                         ImmutableMap.<String, String>builder()
@@ -175,9 +183,7 @@ public class TestDeltaLakePlugin
     @Test
     public void testSystemAccessControl()
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
-
+        ConnectorFactory factory = getConnectorFactory();
         Connector connector = factory.create(
                 "test",
                 ImmutableMap.<String, String>builder()
@@ -193,11 +199,10 @@ public class TestDeltaLakePlugin
     public void testFileBasedAccessControl()
             throws Exception
     {
-        Plugin plugin = new DeltaLakePlugin();
-        ConnectorFactory factory = getOnlyElement(plugin.getConnectorFactories());
+        ConnectorFactory factory = getConnectorFactory();
         File tempFile = File.createTempFile("test-delta-lake-plugin-access-control", ".json");
         tempFile.deleteOnExit();
-        Files.write(tempFile.toPath(), "{}".getBytes(UTF_8));
+        Files.writeString(tempFile.toPath(), "{}");
 
         factory.create(
                         "test",
@@ -208,5 +213,10 @@ public class TestDeltaLakePlugin
                                 .buildOrThrow(),
                         new TestingConnectorContext())
                 .shutdown();
+    }
+
+    private static ConnectorFactory getConnectorFactory()
+    {
+        return getOnlyElement(new DeltaLakePlugin().getConnectorFactories());
     }
 }
